config/samples/gateway-hybrid-with-udproute.yaml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: kong
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: kong
    namespace: default
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: kong
  namespace: default
spec:
  gatewayClassName: kong
  listeners:
  - name: udp
    protocol: UDP
    port: 9999
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: UDPRoute
---
apiVersion: v1
kind: Service
metadata:
  name: coredns
  namespace: default
spec:
  ports:
    - protocol: UDP
      name: dns
      port: 53
      targetPort: 53
  selector:
    app: coredns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coredns
  namespace: default
  labels:
    app: coredns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coredns
  template:
    metadata:
      labels:
        app: coredns
    spec:
      containers:
        - name: coredns
          image: coredns/coredns:1.11.3
          args:
            - -conf
            - /etc/coredns/Corefile
          ports:
            - containerPort: 53
              protocol: UDP
              name: dns
          volumeMounts:
            - name: config
              mountPath: /etc/coredns
      volumes:
        - name: config
          configMap:
            name: coredns
